benchmarking: complete 1KB scaling suite (~6k rows/s peak) and 4KB rehydration; phase 12.7 in progress